--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "x-slider",
   "version": "0.0.1",
-  "description": "`Slider as a vanilla Web Component'",
+  "description": "Slider as a vanilla Web Component",
   "main": "src/x-slider.js",
   "scripts": {
-    "install": "npm im && bower i",
     "start": "python -m SimpleHTTPServer | open http://localhost:8000/demo/",
-    "test": "wct --npm"
+
+    "test-lint": "eslint src test *.js",
+    "test-unit": "karma start",
+    "test": "npm run test-lint && npm run test-unit"
   },
   "repository": {
     "type": "git",
@@ -14,6 +16,7 @@
   },
   "keywords": [
     "Slider",
+    "Carousel",
     "Web",
     "Components"
   ],
@@ -23,9 +26,20 @@
     "url": "https://github.com/ciampo/x-slider/issues"
   },
   "homepage": "https://github.com/ciampo/x-slider#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@webcomponents/webcomponentsjs": "^1.0.10"
+  },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "^1.0.10",
-    "web-component-tester": "^6.1.5"
+    "chai": "^4.1.2",
+    "chromedriver": "^2.32.0",
+    "eslint": "^4.6.1",
+    "eslint-config-google": "^0.9.1",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "^1.3.0",
+    "karma-safari-launcher": "^1.0.0",
+    "mocha": "^3.5.0"
   }
 }
