--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/x-slider.js",
   "scripts": {
     "start": "python -m SimpleHTTPServer | open http://localhost:8000/demo/",
-
     "test-lint": "eslint src test *.js",
     "test-unit": "karma start",
-    "test": "npm run test-lint && npm run test-unit"
+    "test-e2e": "node run-e2e-tests.js",
+    "test": "npm run test-lint && npm run test-unit && npm run test-e2e"
   },
   "repository": {
     "type": "git",
@@ -34,12 +34,16 @@
     "chromedriver": "^2.32.0",
     "eslint": "^4.6.1",
     "eslint-config-google": "^0.9.1",
+    "express": "^4.15.4",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "mz": "^2.6.0",
+    "selenium-assistant": "^5.1.1",
+    "selenium-webdriver": "^3.5.0"
   }
 }
