--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "url": "https://github.com/ciampo/x-slider/issues"
   },
   "homepage": "https://github.com/ciampo/x-slider#readme",
-  "dependencies": {
-    "@webcomponents/webcomponentsjs": "^1.0.10"
-  },
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^1.0.14",
     "chai": "^4.1.2",
     "chromedriver": "^2.32.0",
     "eslint": "^4.6.1",
