--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test-lint": "eslint src test *.js",
     "test-unit": "karma start",
     "test-e2e": "node run-e2e-tests.js",
-    "test": "npm run test-lint && npm run test-unit && npm run test-e2e"
+    "test": "npm run test-lint && npm run test-unit && npm run test-e2e",
+    "docs": "jsdoc -d docs src/x-slider.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,7 @@
   "keywords": [
     "Slider",
     "Carousel",
-    "Web",
-    "Components"
+    "Web Components"
   ],
   "author": "Marco Ciampini <marco.ciampo@gmail.com>",
   "license": "MIT",
