--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-unit": "karma start",
     "test-e2e": "node run-e2e-tests.js",
     "test": "npm run test-lint && npm run test-unit && npm run test-e2e",
-    "docs": "jsdoc -d docs src/x-slider.js"
+    "docs": "rm -rf docs/ && jsdoc -d docs src/x-slider.js"
   },
   "repository": {
     "type": "git",
