--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@webcomponents/webcomponentsjs": "^1.0.14",
     "chai": "^4.1.2",
     "chromedriver": "^2.32.0",
+    "css-loader": "^0.28.7",
     "eslint": "^4.6.1",
     "eslint-config-google": "^0.9.1",
     "express": "^4.15.4",
@@ -42,6 +43,8 @@
     "mocha": "^3.5.0",
     "mz": "^2.6.0",
     "selenium-assistant": "^5.1.1",
-    "selenium-webdriver": "^3.5.0"
+    "selenium-webdriver": "^3.5.0",
+    "uglifyjs-webpack-plugin": "^1.1.0",
+    "webpack": "^3.8.1"
   }
 }
