--- a/package.json
+++ b/package.json
@@ -46,14 +46,13 @@
     "mocha": "^3.5.0",
     "mz": "^2.6.0",
     "rollup": "^0.51.8",
+    "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-postcss": "^0.5.5",
     "rollup-plugin-sass": "^0.5.3",
     "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-uglify": "^2.0.1",
     "selenium-assistant": "^5.1.1",
-    "selenium-webdriver": "^3.5.0",
-    "uglify-es": "^3.1.10"
+    "selenium-webdriver": "^3.5.0"
   }
 }
