--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
     "rollup-plugin-serve": "^0.4.2",
     "selenium-assistant": "^5.1.1",
     "selenium-webdriver": "^3.5.0"
+  },
+  "peerDependencies": {
+    "wicg-inert": "1.x",
+    "wicg-focus-ring": "3.x"
   }
 }
