--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^7.1.6",
     "chai": "^4.1.2",
     "chromedriver": "^2.32.0",
+    "cssnano": "^3.10.0",
     "eslint": "^4.6.1",
     "eslint-config-google": "^0.9.1",
     "express": "^4.15.4",
@@ -45,12 +46,12 @@
     "karma-safari-launcher": "^1.0.0",
     "mocha": "^3.5.0",
     "mz": "^2.6.0",
+    "postcss-inline-svg": "^3.0.0",
     "rollup": "^0.51.8",
     "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-postcss": "^0.5.5",
-    "rollup-plugin-sass": "^0.5.3",
     "rollup-plugin-serve": "^0.4.2",
     "selenium-assistant": "^5.1.1",
     "selenium-webdriver": "^3.5.0"
