--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test-e2e": "node run-e2e-tests.js",
     "test": "npm run test-lint && npm run test-unit && npm run test-e2e",
     "start": "npm run bundle-dev",
-    "build": "npm run docs && npm run bundle-prod"
+    "build": "npm run bundle-prod"
   },
   "repository": {
     "type": "git",
