--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mocha": "^3.5.0",
     "mz": "^2.6.0",
     "postcss-inline-svg": "^3.0.0",
+    "prismjs": "^1.10.0",
     "rollup": "^0.51.8",
     "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-html": "^0.2.1",
