--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "postcss-inline-svg": "^3.0.0",
     "prismjs": "^1.10.0",
     "rollup": "^0.51.8",
-    "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-postcss": "^1.0.5",
     "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-uglify": "^3.0.0",
     "selenium-assistant": "^5.1.1",
     "selenium-webdriver": "^3.5.0"
   },
