--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "bundle-dev": "node_modules/.bin/rollup -c rollup-dev.config.js --watch",
     "bundle-prod": "node_modules/.bin/rollup -c rollup-prod.config.js",
+    "bundle-es5": "node_modules/.bin/rollup -c rollup-es5.config.js",
     "test-lint": "eslint test *.js",
     "test-unit": "karma start",
     "test-e2e": "node run-e2e-tests.js",
     "test": "npm run test-lint && npm run test-unit && npm run test-e2e",
     "start": "npm run bundle-dev",
-    "build": "npm run bundle-prod"
+    "build": "npm run bundle-prod && npm run bundle-es5"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,9 @@
   },
   "homepage": "https://github.com/ciampo/x-slider#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.39",
+    "@babel/plugin-external-helpers": "^7.0.0-beta.39",
+    "@babel/preset-env": "^7.0.0-beta.39",
     "@webcomponents/webcomponentsjs": "^1.0.14",
     "autoprefixer": "^7.1.6",
     "chai": "^4.1.2",
@@ -48,6 +52,7 @@
     "postcss-inline-svg": "^3.0.0",
     "prismjs": "^1.10.0",
     "rollup": "^0.51.8",
+    "rollup-plugin-babel": "^4.0.0-beta.1",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-postcss": "^1.0.5",
