--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
   },
   "homepage": "https://github.com/ciampo/x-slider#readme",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.39",
-    "@babel/plugin-external-helpers": "^7.0.0-beta.39",
-    "@babel/preset-env": "^7.0.0-beta.39",
     "@webcomponents/webcomponentsjs": "^1.0.14",
     "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "chromedriver": "^2.32.0",
     "cssnano": "^3.10.0",
@@ -52,7 +53,7 @@
     "postcss-inline-svg": "^3.0.0",
     "prismjs": "^1.10.0",
     "rollup": "^0.51.8",
-    "rollup-plugin-babel": "^4.0.0-beta.1",
+    "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-postcss": "^1.0.5",
