--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test-e2e": "node run-e2e-tests.js",
     "test": "npm run test-lint && npm run test-unit && npm run test-e2e",
     "start": "npm run bundle-dev",
+    "prebuild": "npm run test",
     "build": "npm run bundle-prod && npm run bundle-es5"
   },
   "repository": {
