--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Slider as a vanilla Web Component",
   "main": "src/x-slider.js",
   "scripts": {
-    "bundle-dev": "node_modules/.bin/rollup -c rollup-config/rollup-dev.config.js --watch",
+    "bundle-dev": "node_modules/.bin/rollup -c rollup-config/rollup-dev.config.js",
     "bundle-prod": "node_modules/.bin/rollup -c rollup-config/rollup-prod.config.js",
     "bundle-es5": "node_modules/.bin/rollup -c rollup-config/rollup-es5.config.js",
     "test-lint": "eslint test *.js",
     "test-unit": "karma start",
     "test-e2e": "node run-e2e-tests.js",
     "test": "npm run test-lint && npm run test-unit && npm run test-e2e",
-    "start": "npm run bundle-dev",
+    "start": "node_modules/.bin/rollup -c rollup-config/rollup-dev-serve.config.js --watch",
     "build": "npm run bundle-dev && npm run bundle-prod && npm run bundle-es5"
   },
   "repository": {
