GH-12 GH-4 refactor(tests): removing previous setup, adding cypress

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "bundle-prod": "node_modules/.bin/rollup -c rollup-config/rollup-prod.config.js",
     "bundle-es5": "node_modules/.bin/rollup -c rollup-config/rollup-es5.config.js",
     "test-lint": "eslint test *.js",
-    "test-unit": "karma start",
-    "test-e2e": "node run-e2e-tests.js",
-    "test": "npm run test-lint && npm run test-unit && npm run test-e2e",
+    "test": "npm run test-lint && echo test",
     "start": "node_modules/.bin/rollup -c rollup-config/rollup-dev-serve.config.js --watch",
     "build": "npm run bundle-dev && npm run bundle-prod && npm run bundle-es5"
   },
@@ -36,20 +34,10 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "chai": "^4.1.2",
-    "chromedriver": "^2.32.0",
     "cssnano": "^3.10.0",
+    "cypress": "^2.0.4",
     "eslint": "^4.6.1",
     "eslint-config-google": "^0.9.1",
-    "express": "^4.15.4",
-    "karma": "^1.7.1",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.0.1",
-    "karma-mocha": "^1.3.0",
-    "karma-safari-launcher": "^1.0.0",
-    "mocha": "^3.5.0",
-    "mz": "^2.6.0",
     "postcss-inline-svg": "^3.0.0",
     "prismjs": "^1.10.0",
     "rollup": "^0.51.8",
@@ -58,9 +46,7 @@
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-postcss": "^1.0.5",
     "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-uglify": "^3.0.0",
-    "selenium-assistant": "^5.1.1",
-    "selenium-webdriver": "^3.5.0"
+    "rollup-plugin-uglify": "^3.0.0"
   },
   "peerDependencies": {
     "wicg-inert": "1.x",
