--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "bundle-prod": "node_modules/.bin/rollup -c rollup-config/rollup-prod.config.js",
     "bundle-es5": "node_modules/.bin/rollup -c rollup-config/rollup-es5.config.js",
     "test-lint": "eslint test *.js",
-    "test-unit": "karma start",
-    "test-e2e": "node run-e2e-tests.js",
-    "test": "npm run test-lint && npm run test-unit && npm run test-e2e",
+    "test": "npm run test-lint && karma start",
     "start": "node_modules/.bin/rollup -c rollup-config/rollup-dev-serve.config.js --watch",
-    "build": "npm run bundle-dev && npm run bundle-prod && npm run bundle-es5"
+    "build": "npm run test -- --single-run && npm run bundle-dev && npm run bundle-prod && npm run bundle-es5"
   },
   "repository": {
     "type": "git",
