--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "cssnano": "^3.10.0",
     "eslint": "^4.6.1",
     "eslint-config-google": "^0.9.1",
-    "express": "^4.15.4",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -47,7 +46,6 @@
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "mocha": "^3.5.0",
-    "mz": "^2.6.0",
     "postcss-inline-svg": "^3.0.0",
     "prismjs": "^1.10.0",
     "rollup": "^0.51.8",
@@ -56,9 +54,7 @@
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-postcss": "^1.0.5",
     "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-uglify": "^3.0.0",
-    "selenium-assistant": "^5.1.1",
-    "selenium-webdriver": "^3.5.0"
+    "rollup-plugin-uglify": "^3.0.0"
   },
   "peerDependencies": {
     "wicg-inert": "1.x",
