--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
+    "chai-spies": "^1.0.0",
     "chromedriver": "^2.32.0",
     "cssnano": "^3.10.0",
     "eslint": "^4.6.1",
     "eslint-config-google": "^0.9.1",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.1",
