--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,18 @@
 sudo: required
+
+os: osx
+
 language: node_js
 node_js:
   - "8"
+
 addons:
   chrome: stable
+  firefox: latest
+
+before_script:
+ - "sudo chown root /opt/google/chrome/chrome-sandbox"
+ - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
+
+install:
+  - npm install
