--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macro-carousel",
-  "version": "0.9.3",
+  "version": "1.0.0-alpha",
   "description": "Slider as a vanilla Web Component",
   "main": "src/macro-carousel.js",
   "scripts": {
