--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "macro-carousel",
-  "version": "1.0.0-alpha",
-  "description": "Slider as a vanilla Web Component",
+  "version": "1.0.0-alpha.1",
+  "description": "Carousel as a vanilla Web Component",
   "main": "src/macro-carousel.js",
   "scripts": {
     "bundle-dev": "node_modules/.bin/rollup -c rollup-config/rollup-dev.config.js",
@@ -19,8 +19,8 @@
     "url": "git+https://github.com/ciampo/macro-carousel.git"
   },
   "keywords": [
-    "Slider",
     "Carousel",
+    "Slider",
     "Web Components"
   ],
   "author": "Marco Ciampini <marco.ciampo@gmail.com>",
