--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,17 @@ os: osx
 
 language: node_js
 node_js:
-  - "8"
+  - "node"
+
+install:
+  - npm i -g npm@5.7.1
+  - npm ci
 
 addons:
   chrome: stable
   firefox: latest
 
+# keep the npm cache around to speed up installs
 cache:
   directories:
-    - node_modules
+  - "$HOME/.npm"
