--- a/package.json
+++ b/package.json
@@ -30,17 +30,16 @@
   },
   "homepage": "https://github.com/ciampo/macro-carousel#readme",
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@webcomponents/shadycss": "^1.1.1",
     "@webcomponents/webcomponentsjs": "^1.0.14",
-    "autoprefixer": "^7.1.6",
-    "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "autoprefixer": "^9.6.1",
     "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
     "chromedriver": "^2.32.0",
-    "cssnano": "^3.10.0",
+    "cssnano": "^4.1.10",
     "eslint": "^4.6.1",
     "eslint-config-google": "^0.9.1",
     "karma": "^1.7.1",
@@ -53,20 +52,25 @@
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "mocha": "^3.5.0",
-    "postcss-inline-svg": "^3.0.0",
+    "postcss-inline-svg": "^4.1.0",
     "prismjs": "^1.10.0",
-    "rollup": "^0.51.8",
-    "rollup-plugin-babel": "^3.0.3",
+    "rollup": "^1.21.3",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-html": "^0.2.1",
-    "rollup-plugin-livereload": "^0.6.0",
-    "rollup-plugin-postcss": "^1.0.5",
-    "rollup-plugin-re": "^1.0.6",
-    "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-livereload": "^1.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-re": "^1.0.7",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^5.1.2",
     "simulant": "^0.2.2"
   },
   "peerDependencies": {
-    "wicg-inert": "1.x",
-    "focus-visible": "4.x"
-  }
+    "wicg-inert": "2.x",
+    "focus-visible": "5.x"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 1%",
+    "ie >= 11"
+  ]
 }
